objects/Reisekosten_Art__c.object
<CustomObject>
    <label>Reisekosten Art</label>
    <nameField>
        <displayFormat>RA-{0000}</displayFormat>
        <label>Reisekosten Art Nummer</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reisekosten Arten</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Sonstiges__c</fullName>
        <label>Sonstiges</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reisekosten__c</fullName>
        <label>Reisekosten</label>
        <referenceTo>Reisekosten__c</referenceTo>
        <relationshipLabel>Reisekosten Arten</relationshipLabel>
        <relationshipName>Reisekosten_Arten</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>T_FMArtKMHelper__c</fullName>
        <label>[T]_FMArtKMHelper</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>km-Pauschale mit dem privaten PkW nach den Regelungen des Reisekostenrechts</fullName>
                </value>
                <value>
                    <fullName>Andere Erstattungsarten</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>for_Month_Quote__c</fullName>
        <description>SFC-2293</description>
        <label>for Month/Quote</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>pro Monat</fullName>
                </value>
                <value>
                    <fullName>pro Einsatz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T_FMArtHelpPicklist__c</fullName>
        <label>[T]_FMArtHelpPicklist</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bahntickets</fullName>
                </value>
                <value>
                    <fullName>ÖPNV - Tickets</fullName>
                </value>
                <value>
                    <fullName>Taxifahrten</fullName>
                </value>
                <value>
                    <fullName>Flug - Tickets</fullName>
                </value>
                <value>
                    <fullName>Mietfahrzeug</fullName>
                </value>
                <value>
                    <fullName>Bahncard</fullName>
                </value>
                <value>
                    <fullName>Fahrradverleih</fullName>
                </value>
                <value>
                    <fullName>Maut</fullName>
                </value>
                <value>
                    <fullName>Sonstiges</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Verpflegung_Erstattung__c</fullName>
        <label>Verpflegung Erstattung</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Verpflegungsmehraufwendungen nach den Regelungen des Reisekostenrechts</fullName>
                </value>
                <value>
                    <fullName>Einmalpauschale (steuerpflichtig)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unterkunft_Erstattung_Art_Klinik__c</fullName>
        <label>Unterkunft Erstattung Art Klinik</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Einmalpauschale</fullName>
                </value>
                <value>
                    <fullName>per Unterkunftsrechnung</fullName>
                </value>
                <value>
                    <fullName>arbeitstäglich inkl. An- und Abreise</fullName>
                </value>
                <value>
                    <fullName>kalendertäglich</fullName>
                </value>
                <value>
                    <fullName>bei krankheitsbedingten Ausfall</fullName>
                    <isActive>false</isActive>
                    <label>bei krankheitsbedingten Ausfall</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fahrkosten_und_Mobilitaet_Erstattung__c</fullName>
        <label>Fahrkosten und Mobilität Erstattung</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pauschale nach den Regelungen des Reisekostenrechts</fullName>
                </value>
                <value>
                    <fullName>Einmalpauschale (steuerpflichtig)</fullName>
                </value>
                <value>
                    <fullName>laut Unterkunftsrechnung</fullName>
                </value>
                <value>
                    <fullName>km-Pauschale mit dem privaten PkW nach den Regelungen des Reisekostenrechts</fullName>
                </value>
                <value>
                    <fullName>Bahntickets</fullName>
                </value>
                <value>
                    <fullName>ÖPNV - Tickets</fullName>
                </value>
                <value>
                    <fullName>Taxifahrten</fullName>
                </value>
                <value>
                    <fullName>Flug - Tickets</fullName>
                </value>
                <value>
                    <fullName>Mietfahrzeug</fullName>
                </value>
                <value>
                    <fullName>Bahncard</fullName>
                </value>
                <value>
                    <fullName>Fahrradverleih</fullName>
                </value>
                <value>
                    <fullName>Maut</fullName>
                </value>
                <value>
                    <fullName>Sonstiges</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unterkunft_Erstattung_Art_Mitarbeiter__c</fullName>
        <label>Unterkunft Erstattung Art Mitarbeiter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Einmalpauschale (steuerpflichtig)</fullName>
                </value>
                <value>
                    <fullName>per Unterkunftsrechnung</fullName>
                </value>
                <value>
                    <fullName>pro Übernachtung</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fahrkosten_und_Mobilit_t_Erstattungsart__c</fullName>
        <label>Fahrkosten und Mobilität Erstattungsart</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>km-Pauschale mit dem privaten PkW nach den Regelungen des Reisekostenrechts</fullName>
                </value>
                <value>
                    <fullName>Bahntickets</fullName>
                </value>
                <value>
                    <fullName>ÖPNV - Tickets</fullName>
                </value>
                <value>
                    <fullName>Taxifahrten</fullName>
                </value>
                <value>
                    <fullName>Flug - Tickets</fullName>
                </value>
                <value>
                    <fullName>Mietfahrzeug</fullName>
                </value>
                <value>
                    <fullName>Bahncard</fullName>
                </value>
                <value>
                    <fullName>Fahrradverleih</fullName>
                </value>
                <value>
                    <fullName>Maut</fullName>
                </value>
                <value>
                    <fullName>Sonstiges</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>